@@ -9,6 +9,7 @@ import com.taller_mecanico.repository.UsuarioRolRepository;
 import java.util.stream.Collectors;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Bean;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.web.SecurityFilterChain;
@@ -16,6 +17,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.crypto.factory.PasswordEncoderFactories;
 import org.springframework.security.crypto.password.NoOpPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
@@ -28,36 +30,39 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 public class SecurityConfig {
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/", "/index", "/login",
-                                "/registro", "/registro/**",
-                                "/css/*", "/js/", "/img/", "/webjars/*").permitAll()
-                        .requestMatchers("/vehiculo/*", "/cita/*").hasRole("CLIENTE")
-                        .requestMatchers("/mecanico/**").hasRole("MECANICO")
-                        .requestMatchers("/admin/*", "/inventario/*").hasRole("ADMIN")
-                        .anyRequest().authenticated()
-                )
-                .formLogin(form -> form
-                        .loginPage("/login")
-                        .loginProcessingUrl("/login")
-                        .defaultSuccessUrl("/cita/lista", true)
-                        .permitAll()
-                )
-                .logout(log -> log
-                        .logoutUrl("/logout")
-                        .logoutSuccessUrl("/")
-                        .permitAll()
-                )
-                .csrf(csrf -> csrf.ignoringRequestMatchers("/registro/guardar"));
-
-        return http.build();
+    public PasswordEncoder passwordEncoder() {
+        return PasswordEncoderFactories.createDelegatingPasswordEncoder(); // para poder utilizar bcrypt por el tema de seguridad y encriptacion
     }
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return NoOpPasswordEncoder.getInstance();
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+        http
+                .csrf(csrf -> csrf
+                .ignoringRequestMatchers("/logout")
+                )
+                .headers(h -> h.frameOptions(f -> f.sameOrigin()))
+                .authorizeHttpRequests(auth -> auth
+                .requestMatchers("/css/*", "/js/", "/img/**", "/webjars/*").permitAll()
+                .requestMatchers("/", "/index", "/login", "/registro", "/registro/**", "/error").permitAll()
+                .requestMatchers("/vehiculo/**", "/cita/**").hasAnyRole("CLIENTE", "ADMIN", "MECANICO")
+                .requestMatchers("/mecanico/**", "/inventario/**").hasAnyRole("MECANICO", "ADMIN")
+                /*.requestMatchers("/admin/**", "/inventario/**").hasRole("ADMIN")*/
+                .anyRequest().authenticated()
+                )
+                .formLogin(form -> form
+                .loginPage("/login").permitAll()
+                .failureUrl("/login?error")
+                /*.loginProcessingUrl("/login")*/
+                .defaultSuccessUrl("/cita/lista", true)
+                )
+                .logout(log -> log
+                .logoutUrl("/logout")
+                .logoutSuccessUrl("/login?logout")
+                .permitAll()
+                );
+        /*.csrf(csrf -> csrf.ignoringRequestMatchers("/registro/guardar"))*/
+
+        return http.build();
     }
 
     @Bean
@@ -69,12 +74,14 @@ public class SecurityConfig {
             var u = usuarioRepo.findByUsername(username)
                     .orElseThrow(() -> new UsernameNotFoundException("No existe: " + username));
 
-            var rolesUsuario = usuarioRolRepo.findByUsuario_IdUsuario(u.getIdUsuario());
-
-            var authorities = rolesUsuario.stream()
+            /*var rolesUsuario = usuarioRolRepo.findByUsuario_IdUsuario(u.getIdUsuario());*/
+            var authorities = usuarioRolRepo.findByUsuario_IdUsuario(u.getIdUsuario()).stream()
                     .map(ur -> new SimpleGrantedAuthority("ROLE_" + ur.getRol().getRol()))
-                    .collect(Collectors.toList());
+                    .toList();
 
+            /*var authorities = rolesUsuario.stream()
+                    .map(ur -> new SimpleGrantedAuthority("ROLE_" + ur.getRol().getRol()))
+                    .collect(Collectors.toList());*/
             return User.withUsername(u.getUsername())
                     .password(u.getPassword())
                     .authorities(authorities)
